--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "node-heartbeats",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A simple javascript library to very efficiently keep track of time differences.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodeunit test/test.js",
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/arjunmehta/node-heartbeats.git"
+  }, 
+  "devDependencies": {
+    "assert": "~1.0",
+    "nodeunit": "~0.8.8"
   },
   "keywords": [
     "heartbeat",
