--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "node-heartbeats",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A simple javascript library to very efficiently keep track of time differences.",
   "main": "main.js",
   "scripts": {
-    "test": "nodeunit test/test.js",
+    "test": "nodeunit test/test.js"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/arjunmehta/node-heartbeats.git"
-  }, 
+  },   
   "devDependencies": {
     "assert": "~1.0",
     "nodeunit": "~0.8.8"
