fixing package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-heartbeats",
+  "name": "heartbeats",
   "version": "0.1.0",
   "description": "A simple node.js module to very efficiently track whether things are keeping up at a certain pace.",
   "main": "main.js",
