--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "heartbeats",
   "version": "0.9.0",
-  "description": "A simple node.js module to very efficiently manage timed events. A great alternative to using multiple setIntervals.",
+  "description": "A simple node.js module to very efficiently manage time-based events and objects.",
   "main": "main.js",
   "scripts": {
     "test": "nodeunit test/test.js"
