--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "heartbeats",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A simple node.js module to very efficiently manage time-based events and objects.",
   "main": "main.js",
   "scripts": {
@@ -17,7 +17,8 @@
   "keywords": [
     "heartbeat",
     "heartbeats",
-    "interval",
+    "setInterval",
+    "setTimeout",
     "pulse",
     "timing",
     "timer",
