--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "heartbeats",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "A simple node.js module to very efficiently manage time-based events and objects.",
   "main": "main.js",
   "scripts": {
-    "test": "nodeunit test/test.js"
+    "test": "nodeunit test/test.js",
+    "install": "browserify . -o heartbeats.js -s heartbeats"
   },
   "repository": {
     "type": "git",
@@ -13,8 +14,7 @@
   "devDependencies": {
     "assert": "~1.0",
     "nodeunit": "~0.8.8",
-    "mocha": "*",
-    "chai": "*"
+    "browserify": ">=5.0"
   },
   "keywords": [
     "heartbeat",
