--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "assert": "~1.0",
     "nodeunit": "~0.8.8",
-    "browserify": ">=5.0"
+    "browserify": "^7.0.2"
   },
   "keywords": [
     "heartbeat",
