--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "nodeunit test/test.js",
-    "install": "browserify . -o heartbeats.js -s heartbeats"
+    "browser-heartbeats": "browserify . -o heartbeats.js -s heartbeats"
   },
   "repository": {
     "type": "git",
@@ -13,8 +13,7 @@
   },   
   "devDependencies": {
     "assert": "~1.0",
-    "nodeunit": "~0.8.8",
-    "browserify": "~7.0.2"
+    "nodeunit": "~0.8.8"
   },
   "keywords": [
     "heartbeat",
