--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },   
   "devDependencies": {
     "assert": "~1.0",
-    "nodeunit": "~0.8.8"
+    "nodeunit": "~0.8.8",
+    "benchmark": "~1.0.0"
   },
   "keywords": [
     "heartbeat",
