--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "heartbeats",
     "version": "3.1.3",
-    "description": "A simple Node module to very efficiently manage time-based events and objects.",
+    "description": "Very efficiently manage time-based events and objects.",
     "main": "main.js",
     "scripts": {
         "test": "nodeunit test/test.js",
